Fix issue of nav-bar becoming unusable after a user comes to linked data page. svg element is too big and is all over the place. Hack: add z-index to nav-bar makes the nav-bar usable. TODO: fix the hack.

--- a/swtr/static/css/swtmaker.css
+++ b/swtr/static/css/swtmaker.css
@@ -5,6 +5,9 @@ body {
 .annotorious-editor {
   min-width: 250px;
 }
+#header {
+    z-index: 1;
+}
 .annotorious-editor-text {
   font-size: 12px;
   min-height: 35px;
